@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Fixed the tests so they will not break in the year 2020. The tests were
+  passing in 2-digit years on the assumption that a year like "70" would be
+  treated as 1970, but starting in 2020 this would be treated as 2070
+  instead. Reported by Bernhard M. Wiedemann. RT #124787.
+
+
 1.25     2016-11-17
 
 - Reduce memory usage by only loading Config if needed and not importing from
